@@ -1,3 +1,10 @@
+2007-02-09  Martin Leidig  <mleidig@schlund.de>
+
+	* build.xml: Added new target srcjar, which builds a jar file
+	containing the Java sources needed for debugging. The target
+	is automatically executed when calling ant dist and creates an
+	according pfixcore-src-{version].jar file in the dist directory
+
 2007-02-08  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* src/de/schlund/pfixcore/util/UnpackModuleTask.java: 
